# Voyagair

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  justfile  mkdocs.yml  pyproject.toml
.cursor/: AGENTS.md
.cursor/rules/: voyagair.mdc
.cursor/skills/flight-search-provider/: SKILL.md
.cursor/skills/travel-agent-mcp/: SKILL.md
.cursor/skills/voyagair-ui/: SKILL.md
docs/: api.md  architecture.md  cli.md  index.md  setup.md
examples/: cape-town-return.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: api.ts  main.ts
frontend/src/components/: location-input.ts
frontend/src/panels/: debug-panel.ts  summary-panel.ts  voyage-config.ts  voyage-results.ts
frontend/src/styles/: main.css
shared/data/: cabin-classes.json  regions.json
shared/styles/: variables.css
src/voyagair/api/: app.py  deps.py
src/voyagair/api/agent/: agent.py
src/voyagair/api/routes/: plan.py  search.py
src/voyagair/cli/: app.py
src/voyagair/cli/commands/: airports.py  explore.py  plan.py
src/voyagair/core/: cache.py  config.py
src/voyagair/core/graph/: airports.py
src/voyagair/core/providers/: __init__.py  amadeus_provider.py  google_flights.py  kiwi.py
src/voyagair/core/search/: models.py  orchestrator.py
voyagair/: __init__.py
voyagair/api/: app.py
voyagair/api/agent/: tools.py
voyagair/api/routes/: agent.py  airports.py  debug.py  voyage.py  ws.py
voyagair/app/: __init__.py  serve.py
voyagair/app/static/css/: app.css
voyagair/app/static/js/: app.js  location-input.js  summary-panel.js  voyage-config.js  (+1 more)
voyagair/app/templates/: index.html
voyagair/cli/: app.py
voyagair/cli/commands/: explore.py  search.py
voyagair/core/: config.py  rate_limiter.py
voyagair/core/graph/: airports.py  route_graph.py  solver.py
voyagair/core/providers/: base.py  google_flights.py  rome2rio.py
voyagair/core/search/: filters.py
voyagair/core/voyage/: __init__.py  config_parser.py  models.py  report.py  resolver.py  search.py  store.py  summary_agent.py  travel_agent.py
(+1 files in other folders)
